added "add credit transaction" & refactor DTOs
