# henripayapi/src/main/java/com/henripay/henripayapi/dto/MandateDetailsDto.java
@@ -1,15 +1,0 @@
-package com.henripay.henripayapi.dto;
-
-import lombok.Data;
-
-import java.time.LocalDate;
-
-@Data
-public class MandateDetailsDto {
-    private long mandateIdentifier;
-    private long customer;
-    private long merchant;
-    private LocalDate signatureDate;
-    private LocalDate startDate;
-    private LocalDate endDate;
-}
