# henripayapi/src/main/java/com/henripay/henripayapi/dto/TransactionResponse.java
@@ -1,7 +1,0 @@
-package com.henripay.henripayapi.dto;
-
-import lombok.Data;
-
-@Data
-public class TransactionResponse {
-}
